// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H2 component should accept additional props 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    accessible={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Black",
        "fontSize": 36,
        "lineHeight": 41.4,
      }
    }
  >
    "God is most glorified in us when we are most satisfied in Him" ― John Piper
  </Text>,
]
`;

exports[`the H2 component should accept and render passed in styles 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    style={
      Object {
        "color": "salmon",
        "fontFamily": "InterUI-Black",
        "fontSize": 36,
        "lineHeight": 41.4,
      }
    }
  >
    Salmon text
  </Text>,
]
`;

exports[`the H2 component should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#A5A5A5",
        "borderRadius": 16,
        "height": 36,
        "marginVertical": 2.6999999999999993,
        "width": "100%",
      }
    }
  />,
]
`;

exports[`the H2 component should render a loading state with correct positioning (margins) 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#A5A5A5",
        "borderRadius": 16,
        "height": 36,
        "marginBottom": 20.02,
        "marginTop": 24,
        "marginVertical": 2.6999999999999993,
        "width": "100%",
      }
    }
  />,
]
`;

exports[`the H2 component should render correctly 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Black",
        "fontSize": 36,
        "lineHeight": 41.4,
      }
    }
  >
    Default H2 text
  </Text>,
]
`;

exports[`the H2 component should render with correct padding 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    padded={true}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Black",
        "fontSize": 36,
        "lineHeight": 41.4,
        "paddingBottom": 20.02,
        "paddingTop": 24,
      }
    }
  >
    Padded H2 text
  </Text>,
]
`;
